# web-app-book

./: .env  Cargo.toml  config.yml  state.json
css/: base.css
javascript/: main.js
migrations/2023-04-23-150653_create_to_do_items/: down.sql  up.sql
migrations/2023-04-29-142001_create_users/: down.sql  up.sql
src/: config.rs  database.rs  jwt.rs  main.rs  processes.rs  state.rs
src/json_serialization/: login.rs  login_response.rs  mod.rs  new_user.rs  to_do_items.rs
src/models/: mod.rs
src/models/items/: item.rs  mod.rs  new_item.rs
src/models/user/: new_user.rs  user.rs
src/to_do/: enums.rs  mod.rs
src/to_do/structs/: base.rs  done.rs  pending.rs
src/to_do/traits/: create.rs  delete.rs  edit.rs  get.rs
src/views/: mod.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/auth/: login.rs  logout.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/users/: create.rs  mod.rs
templates/: main.html
templates/components/: header.html
