[package]
name = "web-app-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0.59"
actix-web="4.0.1"
futures = "0.3.21"
async-std = "1.11.0"
# actix-rt = "1.0"
# actix-web = "2.0"
tokio = { version = "1.17.0", features = ["full"] }