[package]
name = "web-app-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0.59"
actix-web="4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
actix-service = "2.0.2"
futures = "0.3.21"
actix-cors = "0.6.1"
surrealdb = { version = "1.0.0-beta.9", features = ["protocol-http"] }
dotenv = "0.15.0"
chrono = "0.4.19"
lazy_static = "1.4.0"
once_cell = "1.18.0"
